--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
-		<link rel="icon" type="image/x-icon" href="on_favicon.png">
-        <link rel="stylesheet" href="style.css">
+	<link rel="icon" type="image/x-icon" href="on_favicon.png">
+        <link rel="stylesheet" href="styles/style.css">
     </head>
     <body>
 
