--- a/index.html
+++ b/index.html
@@ -7,8 +7,21 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="apple-touch-icon" href="apple-touch-icon.png">
-	<link rel="icon" type="image/x-icon" href="on_favicon.png">
+	<link rel="icon" type="image/x-icon" href="https://user-images.githubusercontent.com/93733872/146423436-f7766f23-a6af-4f48-88a9-85d62ef71bab.png">
         <link rel="stylesheet" href="styles/style.css">
+	<link rel="apple-touch-icon" sizes="57x57" href="https://user-images.githubusercontent.com/93733872/146423436-f7766f23-a6af-4f48-88a9-85d62ef71bab.png">
+	<link rel="apple-touch-icon" sizes="60x60" href="https://user-images.githubusercontent.com/93733872/146423436-f7766f23-a6af-4f48-88a9-85d62ef71bab.png">
+	<link rel="apple-touch-icon" sizes="72x72" href="https://user-images.githubusercontent.com/93733872/146423436-f7766f23-a6af-4f48-88a9-85d62ef71bab.png">
+	<link rel="apple-touch-icon" sizes="76x76" href="https://user-images.githubusercontent.com/93733872/146423436-f7766f23-a6af-4f48-88a9-85d62ef71bab.png">
+	<link rel="apple-touch-icon" sizes="114x114" href="https://user-images.githubusercontent.com/93733872/146423436-f7766f23-a6af-4f48-88a9-85d62ef71bab.png">
+	<link rel="apple-touch-icon" sizes="120x120" href="https://user-images.githubusercontent.com/93733872/146423436-f7766f23-a6af-4f48-88a9-85d62ef71bab.png">
+	<link rel="apple-touch-icon" sizes="144x144" href="https://user-images.githubusercontent.com/93733872/146423436-f7766f23-a6af-4f48-88a9-85d62ef71bab.png">
+	<link rel="apple-touch-icon" sizes="152x152" href="https://user-images.githubusercontent.com/93733872/146423436-f7766f23-a6af-4f48-88a9-85d62ef71bab.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="https://user-images.githubusercontent.com/93733872/146423436-f7766f23-a6af-4f48-88a9-85d62ef71bab.png">
+	<link rel="icon" type="image/png" sizes="192x192"  href="https://user-images.githubusercontent.com/93733872/146423436-f7766f23-a6af-4f48-88a9-85d62ef71bab.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="https://user-images.githubusercontent.com/93733872/146423436-f7766f23-a6af-4f48-88a9-85d62ef71bab.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="https://user-images.githubusercontent.com/93733872/146423436-f7766f23-a6af-4f48-88a9-85d62ef71bab.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="https://user-images.githubusercontent.com/93733872/146423436-f7766f23-a6af-4f48-88a9-85d62ef71bab.png">
     </head>
     <body>
 
