--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<div class="wrapAll clearfix">
 			<div class="sidebar">
 				<div class="logo">
-					<a href="/"><img src="logo_mihipedija.png" alt="logo"></a>
+				<a href="/"><img src="https://user-images.githubusercontent.com/93733872/146422794-25cc6e08-1f7c-485c-b252-7b58218fc71f.jpg" alt="logo"></a>
 				</div>
 				<div class="navigation">
 					<h3>Просто овде нема ништа, не знам шта ти није јасно, за шта гледаш кој курац</h3>
@@ -604,7 +604,7 @@
 						<br>
 
 				<div class="postovanje_slika">
-					<img src="145058743-b2cadd71-0fc6-493d-affe-fb95197a19be.png">
+					<img src="https://user-images.githubusercontent.com/93733872/146422937-18251312-87ee-4689-bfce-09fce9dc41fa.png">
 				</div>
 
 						<br>
