--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 		<div class="wrapAll clearfix">
 			<div class="sidebar">
 				<div class="logo">
-				<a href="/"><img src="https://user-images.githubusercontent.com/93733872/146422794-25cc6e08-1f7c-485c-b252-7b58218fc71f.jpg" alt="logo"></a>
+				<a href="/"><img src="https://user-images.githubusercontent.com/93733872/146424270-a5610df6-f9ad-4937-b49c-bce1e9f76ca8.png" alt="logo"></a>
 				</div>
 				<div class="navigation">
 					<h3>Просто овде нема ништа, не знам шта ти није јасно, за шта гледаш кој курац</h3>
@@ -53,7 +53,7 @@
 
 					<div class="articleRight">
 						<div class="articleRightInner">
-							<img src="ikona.jpg" alt="ikona_njegova" />
+							<img src="https://user-images.githubusercontent.com/93733872/146422794-25cc6e08-1f7c-485c-b252-7b58218fc71f.jpg" alt="ikona_njegova" />
 						</div>
 						Миха као игуман у Банци.
 					</div>
