--- a/index.html
+++ b/index.html
@@ -62,8 +62,10 @@
 					<br>
 <!-- svojim padom *(porazom) nije priznao poslove koje je radio vec se vadio na izgovor - познати мит о наркотидцима који му штете срце је грешка јер је за њега депресија већа болест-->
 					<div class="contentsPanel">
-						<div class="contentsHeader">Садржај</div>
-						<ul>
+						<div class="contentsHeader">Садржај
+							<br>
+							 (линкови још нису у функцији)
+						</div>
 							<li>
 								<br>
 								<span>1</span><a href="#">Списи светог миханђеља</a>
