--- a/index.html
+++ b/index.html
@@ -73,7 +73,6 @@
 									<li><span>1.1</span><a href="#rodjenje_njegovo">Рођење Његово</a> </li>
 									<li><span>1.2</span><a href="#prva_knjiga_njegova">Прва књига Његова</a> </li>
 									<li><span>1.3</span><a href="#pesme">Песме</a></li>
-									<li><span>1.4</span><a href="#zucin_plac">Жућин плач</a></li>
 									<li><span>1.5</span><a href="#ispitivanje">Испитивање</a></li>							
 									<li><span>1.6</span><a href="#rasprava_a_i_nj">Расправа апостола и Њега</a></li>							
 									<li><span>1.7</span><a href="#mitolosko_bice">Митолошко биће</a></li>
@@ -172,32 +171,32 @@
 					<h3>Прва књига Његова</h3>
 					<hr width="auto;">
 					<br>
-					<p>
-						<i>Његов почетак</i>
-
+	  				  <p><i>Његов почетак</i></p>
+					<br>
+	   				 <p>
 					Много сам презрен. Охолост срца мога преварила ме је, мене који живим као пропаст, 
 					и у свом срцу говорим: ‘Ко хоће просто да се избијемо?’ И да се сместим високо као 
 					орао или да међу звездама свијем своје гнездо, говори Он.  Кад би к мени дошли лопови 
 					или пљачкаши ноћу, колико би ме опленили? Зар не би покрали само оно што би 
 					желели? Или, кад би к мени дошли берачи марихуане, зар не би оставили и нешто за 
-					мене? Морао сам да издам своје савезнике ради својих послова у Банци.
+						 мене? Морао сам да издам своје савезнике ради својих послова у Банци.</p>
 
-					‘’О, како је Шикоња добро претресен! 
+					<p>‘’О, како је Шикоња добро претресен! 
 					Открио сам Џигина скривена блага! Отераo сам га све до станице.‘’ 
-					Рекао је свештеник Драган.
+						Рекао је свештеник Драган.</p>
 
-					Сви моји савезници су ме напустили, али моји послови су и даље били оспособљени, 
+					<p>Сви моји савезници су ме напустили, али моји послови су и даље били оспособљени, 
 					у замену за своје послове, предао сам Џигу. Људи с којима сам био у миру 
 					напустиће ме. Они ће ми подметнути мрежу као ономе који нема разборитости. Нећу 
 					ли у тај дан, говори Он, уништити мудраце и разборитост у брдовитом подручју 
-					Деспотовца? 
+						Деспотовца? </p>
 
-					Морао сам да уђем у своју Банку на дан Џигине пропасти. Нисам могао да 
+					<p>Морао сам да уђем у своју Банку на дан Џигине пропасти. Нисам могао да 
 					посматрам његову невољу у дан његове пропасти. И нисам могао да стојим на 
 					раскршћима, да јавим за његове другаре; нисам смео да предам оне који су преживели у 
 					дан невоље. Како сам ја поступао с другима, тако ће се и са мном поступати. Моја ће се 
 					дела вратити на моју главу. Али докле год имам реч од свештеника Драгана, сва моја 
-					света дела у Банци су неуништива, као и ја.
+						света дела у Банци су неуништива, као и ја.
 					</p>
 					<br>
 					<br>
@@ -363,12 +362,6 @@
 
 					<br>
 					<br>	 
-					<h3>Жућин плач</h3>
-					<hr width="auto;">
-					<br>
-						<p>* rad je u toku</p>
-					<br>
-					<br>
 					<h3>Испитивање</h3>
 					<hr width="auto;">
 					<br>
