--- a/index.html
+++ b/index.html
@@ -655,59 +655,62 @@
 						<h3>Јеванђеље по издајнику рода Његовог Давиду</h3>
 						<hr width="auto;">
 						<p>
-							“ И тако једном беше грешник Давид доведе некога Луку Тошића у Банку ”
-						“ А Он се расрди те рече Давиду - ”
-						“ Тај је Тошић мени једном свете књиге покрао, где ми нестала вутра мајмуне ”
-						“ И разести се и свом силином насрну на грешника Давида који не беше посустао под дејством и замало не задави Њега ”
-						“ Водила се борба летњи дан до подне кад улетоше арханђели пресвет и Биг Деди и Илија ”
-							“Те раздвојише два другара и свако на свој пут пође ” </p>
+							“ И тако једном беше грешник Давид доведе некога Луку Тошића у Банку ”</p>
+						<p>“ А Он се расрди те рече Давиду - ”</p>
+						<p>“ Тај је Тошић мени једном свете књиге покрао, где ми нестала вутра мајмуне ”</p>
+						<p>“ И разести се и свом силином насрну на грешника Давида који не беше посустао под дејством и замало не задави Њега ”</p>
+						<p>“ Водила се борба летњи дан до подне кад улетоше арханђели пресвет и Биг Деди и Илија ”</p>
+							<p>“Те раздвојише два другара и свако на свој пут пође ” </p>
+
+<br>
 
 
+						<p>“ Једнога дана мученик Аки Стењевачки каже Њему ”</p>
+						<p>“ Бејасмо могли да завршимо неке опијате, а на то овај му одговори ”</p>
+							<p>“ Просто баки, ја то више не радим ”</p>
 
-						<p>“ Једнога дана мученик Аки Стењевачки каже Њему ”
-						“ Бејасмо могли да завршимо неке опијате, а на то овај му одговори ”
-							“ Просто баки, ја то више не радим ”</p>
+<br>
 
+						<p>“ Епископ Хане се створио пред капију Банке те позва Њега да му отвори ”</p>
+						<p>“ И тада Он рече заповедним гласом од кога се затресаше прозори и бедеми замка тргскога</p>
+						<p>Ти</p>
+						<p>	НЕ ” </p>
+<br>
 
+						<p>“ Тресе се земља до великомученика Сакса Зајечарскога ”</p>
+						<p>“ Да л' је то Ковиловача ”</p>
+						<p>“ Ил' је нова заповед ”</p>
+						<p>“ Мислише се људи, па не знадоше шта их снађе ”</p>
+						<p>	“ Да л' на њих паде бес Његова или то само ради Ковиловача ” </p>
+<br>
+						<p>“ И тако једнога лета Господњега рече Он Давиду ”</p>
+						<p>“ А ти мени дај све новце што имаш да видимо ми шта се завршити може од пушенија врсте ”</p>
+						<p>“ Те Давид Њему наивно даде не слутећи да је 365 само на 100 метара ”</p>
+						<p>“ Када дође дан за пушеније рече Он Давиду ”</p>
+						<p>“ Баки просто нема ништа ”</p>
+						<p>	“ Те издајник Давид остаде свежих плућа и сувијех џепова ”</p>
 
-						<p>“ Епископ Хане се створио пред капију Банке те позва Њега да му отвори ”
-						“ И тада Он рече заповедним гласом од кога се затресаше прозори и бедеми замка тргскога
-						Ти
-							НЕ ” </p>
+<br>
 
+						<p>“ А како не, некоћ, мученик Исус претварао флашу воде у флашу вина ”</p>
+						<p>	“ Тако и он претвори гајбу пива у међувршњачко насиље ” </p>
 
-						<p>“ Тресе се земља до великомученика Сакса Зајечарскога ”
-						“ Да л' је то Ковиловача ”
-						“ Ил' је нова заповед ”
-						“ Мислише се људи, па не знадоше шта их снађе ”
-							“ Да л' на њих паде бес Његова или то само ради Ковиловача ” </p>
+<br>
 
-						<p>“ И тако једнога лета Господњега рече Он Давиду ”
-						“ А ти мени дај све новце што имаш да видимо ми шта се завршити може од пушенија врсте ”
-						“ Те Давид Њему наивно даде не слутећи да је 365 само на 100 метара ”
-						“ Када дође дан за пушеније рече Он Давиду ”
-						“ Баки просто нема ништа ”
-							“ Те издајник Давид остаде свежих плућа и сувијех џепова ”</p>
-
-
-
-						<p>“ А како не, некоћ, мученик Исус претварао флашу воде у флашу вина ”
-							“ Тако и он претвори гајбу пива у међувршњачко насиље ” </p>
-
-
-
-						<p>“ Једном на двору цара Миливскога Срђана из династије Гаич, оца Косте јунака битке на бањи, и Лазара студентско-Новосадскога ”
-						“ Цар не беше ту, те у Његово име владаше Коста прворођени ”
-						“ Скупија се нека екипа и попише све одавде до Дунава ”
-						“ И тада дође Он и донесе још пива врсте ~ само за мене баки ”
+						<p>“ Једном на двору цара Миливскога Срђана из династије Гаич, оца Косте јунака битке на бањи, и Лазара студентско-Новосадскога ”</p>
+						<p>“ Цар не беше ту, те у Његово име владаше Коста прворођени ”</p>
+						<p>“ Скупија се нека екипа и попише све одавде до Дунава ”</p>
+						<p>“ И тада дође Он и донесе још пива врсте ~ само за мене баки ”
 
 							</p>
 						<br>
 						<br>
 						<h3>Шест Његових заповести</h3>
 						<hr width="auto;">
+	<br>
 						<p style="text-align:center;" >
 							~
+						<br>
 						Немој имати других богова осим Њега
 						<br>
 						Поштуј само Њега
