--- a/index.html
+++ b/index.html
@@ -614,13 +614,15 @@
 						месеца претвара у вука. Такође се верује да има и способност ширења неистине као и 
 						изговарања речи 'просто' и 'баки' више пута због чега долази до ситуације у којој су 
 						људи, који се налазе у његовој околини, склони самоповређивању.
+							<br>
 
 
 
 							<i>Порекло вукодлака</i>
 
-						Према немачком историчару Јохану Обрадошвицу (нем. Johan Obradoschwitz,такође и 
-						Џоц), у шаманизму, јавља се тежња за стварањем духовних веза између човека и 
+							<br>
+							Према немачком историчару <b>Јохану Обрадошвицу</b> (нем. <i>Johan Obradoschwitz</i>,такође и 
+							<i>Џоц</i>), у шаманизму, јавља се тежња за стварањем духовних веза између човека и 
 						различитих животиња. Сви народи су имали неку животињу за тотемску, за коју су 
 						веровали да од ње потичу. Многим народима је вук био тотемска животиња. Такође по 
 						Џоцовом дневнику, постојао је народ Михури који су живели у близини Зимбабве где су 
